--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
+[workspace]
+members = ["nn"]
+
 [package]
 name = "machine_learning"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+nn = { path = "nn" }
 nalgebra = "0.34.1"
+rand = "0.9.2"
+textplots = "0.8.7"
